# gulp-bot

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: deploy.yml
src/: checks.rs  config.rs  helper.rs  main.rs
src/commands/: gambling.rs  mod.rs  utilities.rs  wow_audit.rs  wow_guild.rs
src/twitter/: feed.rs  mod.rs  poster.rs
src/types/: bot.rs  mod.rs  raids.rs
